--- a/vc11/OscDev.vcxproj
+++ b/vc11/OscDev.vcxproj
@@ -1,3 +1,4 @@
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -49,7 +50,7 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <Optimization>Disabled</Optimization>
-      <AdditionalIncludeDirectories>..\include;"..\..\..\cinder_dev\include";"..\..\..\cinder_dev\boost"</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\include;..\..\..\cinder_dev\include;..\..\..\cinder_dev\boost;..\blocks\Cinder-Asio\src</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;NOMINMAX;_WIN32_WINNT=0x0502;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <MinimalRebuild>true</MinimalRebuild>
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
@@ -75,7 +76,7 @@
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
-      <AdditionalIncludeDirectories>..\include;"..\..\..\cinder_dev\include";"..\..\..\cinder_dev\boost"</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\include;..\..\..\cinder_dev\include;..\..\..\cinder_dev\boost;..\blocks\Cinder-Asio\src</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;NOMINMAX;_WIN32_WINNT=0x0502;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
       <PrecompiledHeader />
@@ -106,9 +107,31 @@
     <ResourceCompile Include="Resources.rc" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\blocks\Cinder-Asio\src\ClientInterface.cpp" />
+    <ClCompile Include="..\blocks\Cinder-Asio\src\DispatcherInterface.cpp" />
+    <ClCompile Include="..\blocks\Cinder-Asio\src\ServerInterface.cpp" />
+    <ClCompile Include="..\blocks\Cinder-Asio\src\SessionInterface.cpp" />
+    <ClCompile Include="..\blocks\Cinder-Asio\src\TcpClient.cpp" />
+    <ClCompile Include="..\blocks\Cinder-Asio\src\TcpServer.cpp" />
+    <ClCompile Include="..\blocks\Cinder-Asio\src\TcpSession.cpp" />
+    <ClCompile Include="..\blocks\Cinder-Asio\src\UdpClient.cpp" />
+    <ClCompile Include="..\blocks\Cinder-Asio\src\UdpSession.cpp" />
+    <ClCompile Include="..\blocks\Cinder-Asio\src\WaitTimer.cpp" />
     <ClCompile Include="..\src\OscDevApp.cpp" />
+    <ClCompile Include="..\src\OscTree.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\blocks\Cinder-Asio\src\ClientInterface.h" />
+    <ClInclude Include="..\blocks\Cinder-Asio\src\DispatcherInterface.h" />
+    <ClInclude Include="..\blocks\Cinder-Asio\src\ServerInterface.h" />
+    <ClInclude Include="..\blocks\Cinder-Asio\src\SessionInterface.h" />
+    <ClInclude Include="..\blocks\Cinder-Asio\src\TcpClient.h" />
+    <ClInclude Include="..\blocks\Cinder-Asio\src\TcpServer.h" />
+    <ClInclude Include="..\blocks\Cinder-Asio\src\TcpSession.h" />
+    <ClInclude Include="..\blocks\Cinder-Asio\src\UdpClient.h" />
+    <ClInclude Include="..\blocks\Cinder-Asio\src\UdpSession.h" />
+    <ClInclude Include="..\blocks\Cinder-Asio\src\WaitTimer.h" />
+    <ClInclude Include="..\include\OscTree.h" />
     <ClInclude Include="..\include\Resources.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
