--- a/test/OscDev/vc11/OscDev.vcxproj
+++ b/test/OscDev/vc11/OscDev.vcxproj
@@ -53,7 +53,7 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <Optimization>Disabled</Optimization>
-      <AdditionalIncludeDirectories>..\include;..\..\..\..\include;..\..\..\..\..\boost;..\..\..\blocks\Cinder-Asio\src;..\..\..\src</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\include;..\..\..\..\..\include;..\..\..\..\..\boost;..\..\..\blocks\Cinder-Asio\src;..\..\..\src</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;NOMINMAX;_WIN32_WINNT=0x0502;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <MinimalRebuild>true</MinimalRebuild>
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
@@ -79,7 +79,7 @@
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
-      <AdditionalIncludeDirectories>..\include;..\..\..\..\include;..\..\..\..\..\boost;..\..\..\blocks\Cinder-Asio\src;..\..\..\src</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\include;..\..\..\..\..\include;..\..\..\..\..\boost;..\..\..\blocks\Cinder-Asio\src;..\..\..\src</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;NOMINMAX;_WIN32_WINNT=0x0502;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
       <PrecompiledHeader />
@@ -110,32 +110,33 @@
     <ResourceCompile Include="Resources.rc" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\blocks\Cinder-Asio\src\ClientInterface.cpp" />
-    <ClCompile Include="..\blocks\Cinder-Asio\src\DispatcherInterface.cpp" />
-    <ClCompile Include="..\blocks\Cinder-Asio\src\ServerInterface.cpp" />
-    <ClCompile Include="..\blocks\Cinder-Asio\src\SessionInterface.cpp" />
-    <ClCompile Include="..\blocks\Cinder-Asio\src\TcpClient.cpp" />
-    <ClCompile Include="..\blocks\Cinder-Asio\src\TcpServer.cpp" />
-    <ClCompile Include="..\blocks\Cinder-Asio\src\TcpSession.cpp" />
-    <ClCompile Include="..\blocks\Cinder-Asio\src\UdpClient.cpp" />
-    <ClCompile Include="..\blocks\Cinder-Asio\src\UdpSession.cpp" />
-    <ClCompile Include="..\blocks\Cinder-Asio\src\WaitTimer.cpp" />
+    <ClCompile Include="..\..\..\blocks\Cinder-Asio\src\ClientInterface.cpp" />
+    <ClCompile Include="..\..\..\blocks\Cinder-Asio\src\DispatcherInterface.cpp" />
+    <ClCompile Include="..\..\..\blocks\Cinder-Asio\src\ServerInterface.cpp" />
+    <ClCompile Include="..\..\..\blocks\Cinder-Asio\src\SessionInterface.cpp" />
+    <ClCompile Include="..\..\..\blocks\Cinder-Asio\src\TcpClient.cpp" />
+    <ClCompile Include="..\..\..\blocks\Cinder-Asio\src\TcpServer.cpp" />
+    <ClCompile Include="..\..\..\blocks\Cinder-Asio\src\TcpSession.cpp" />
+    <ClCompile Include="..\..\..\blocks\Cinder-Asio\src\UdpClient.cpp" />
+    <ClCompile Include="..\..\..\blocks\Cinder-Asio\src\UdpServer.cpp" />
+    <ClCompile Include="..\..\..\blocks\Cinder-Asio\src\UdpSession.cpp" />
+    <ClCompile Include="..\..\..\blocks\Cinder-Asio\src\WaitTimer.cpp" />
+    <ClCompile Include="..\..\..\src\OscTree.cpp" />
     <ClCompile Include="..\src\OscDevApp.cpp" />
-    <ClCompile Include="..\src\OscTree.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\blocks\Cinder-Asio\src\ClientInterface.h" />
-    <ClInclude Include="..\blocks\Cinder-Asio\src\DispatcherInterface.h" />
-    <ClInclude Include="..\blocks\Cinder-Asio\src\ServerInterface.h" />
-    <ClInclude Include="..\blocks\Cinder-Asio\src\SessionInterface.h" />
-    <ClInclude Include="..\blocks\Cinder-Asio\src\TcpClient.h" />
-    <ClInclude Include="..\blocks\Cinder-Asio\src\TcpServer.h" />
-    <ClInclude Include="..\blocks\Cinder-Asio\src\TcpSession.h" />
-    <ClInclude Include="..\blocks\Cinder-Asio\src\UdpClient.h" />
-    <ClInclude Include="..\blocks\Cinder-Asio\src\UdpSession.h" />
-    <ClInclude Include="..\blocks\Cinder-Asio\src\WaitTimer.h" />
-    <ClInclude Include="..\include\OscTree.h" />
-    <ClInclude Include="..\include\Resources.h" />
+    <ClInclude Include="..\..\..\blocks\Cinder-Asio\src\ClientInterface.h" />
+    <ClInclude Include="..\..\..\blocks\Cinder-Asio\src\DispatcherInterface.h" />
+    <ClInclude Include="..\..\..\blocks\Cinder-Asio\src\ServerInterface.h" />
+    <ClInclude Include="..\..\..\blocks\Cinder-Asio\src\SessionInterface.h" />
+    <ClInclude Include="..\..\..\blocks\Cinder-Asio\src\TcpClient.h" />
+    <ClInclude Include="..\..\..\blocks\Cinder-Asio\src\TcpServer.h" />
+    <ClInclude Include="..\..\..\blocks\Cinder-Asio\src\TcpSession.h" />
+    <ClInclude Include="..\..\..\blocks\Cinder-Asio\src\UdpClient.h" />
+    <ClInclude Include="..\..\..\blocks\Cinder-Asio\src\UdpServer.h" />
+    <ClInclude Include="..\..\..\blocks\Cinder-Asio\src\UdpSession.h" />
+    <ClInclude Include="..\..\..\blocks\Cinder-Asio\src\WaitTimer.h" />
+    <ClInclude Include="..\..\..\src\OscTree.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets" />
