--- a/test/OscDev/vc11/OscDev.vcxproj.filters
+++ b/test/OscDev/vc11/OscDev.vcxproj.filters
@@ -5,10 +5,6 @@
       <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
       <Extensions>cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
     </Filter>
-    <Filter Include="Header Files">
-      <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
-      <Extensions>h;hpp;hxx;hm;inl;inc;xsd</Extensions>
-    </Filter>
     <Filter Include="Resource Files">
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav</Extensions>
@@ -19,6 +15,9 @@
     <Filter Include="Blocks\Cinder-Asio">
       <UniqueIdentifier>{d4e438e8-f445-4f89-9898-b6dd40402770}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Blocks\OscTree">
+      <UniqueIdentifier>{019be871-ae17-4d5d-9b6f-156b0969198b}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src\OscDevApp.cpp">
@@ -27,79 +26,82 @@
     <ClCompile Include="..\src\OscDevApp.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClInclude Include="..\include\Resources.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClCompile Include="..\src\OscTree.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="..\blocks\Cinder-Asio\src\ClientInterface.cpp">
+    <ClCompile Include="..\..\..\blocks\Cinder-Asio\src\ClientInterface.cpp">
       <Filter>Blocks\Cinder-Asio</Filter>
     </ClCompile>
-    <ClCompile Include="..\blocks\Cinder-Asio\src\DispatcherInterface.cpp">
+    <ClCompile Include="..\..\..\blocks\Cinder-Asio\src\DispatcherInterface.cpp">
       <Filter>Blocks\Cinder-Asio</Filter>
     </ClCompile>
-    <ClCompile Include="..\blocks\Cinder-Asio\src\ServerInterface.cpp">
+    <ClCompile Include="..\..\..\blocks\Cinder-Asio\src\ServerInterface.cpp">
       <Filter>Blocks\Cinder-Asio</Filter>
     </ClCompile>
-    <ClCompile Include="..\blocks\Cinder-Asio\src\SessionInterface.cpp">
+    <ClCompile Include="..\..\..\blocks\Cinder-Asio\src\SessionInterface.cpp">
       <Filter>Blocks\Cinder-Asio</Filter>
     </ClCompile>
-    <ClCompile Include="..\blocks\Cinder-Asio\src\TcpClient.cpp">
+    <ClCompile Include="..\..\..\blocks\Cinder-Asio\src\TcpClient.cpp">
       <Filter>Blocks\Cinder-Asio</Filter>
     </ClCompile>
-    <ClCompile Include="..\blocks\Cinder-Asio\src\TcpServer.cpp">
+    <ClCompile Include="..\..\..\blocks\Cinder-Asio\src\TcpServer.cpp">
       <Filter>Blocks\Cinder-Asio</Filter>
     </ClCompile>
-    <ClCompile Include="..\blocks\Cinder-Asio\src\TcpSession.cpp">
+    <ClCompile Include="..\..\..\blocks\Cinder-Asio\src\TcpSession.cpp">
       <Filter>Blocks\Cinder-Asio</Filter>
     </ClCompile>
-    <ClCompile Include="..\blocks\Cinder-Asio\src\UdpClient.cpp">
+    <ClCompile Include="..\..\..\blocks\Cinder-Asio\src\UdpClient.cpp">
       <Filter>Blocks\Cinder-Asio</Filter>
     </ClCompile>
-    <ClCompile Include="..\blocks\Cinder-Asio\src\UdpSession.cpp">
+    <ClCompile Include="..\..\..\blocks\Cinder-Asio\src\UdpServer.cpp">
       <Filter>Blocks\Cinder-Asio</Filter>
     </ClCompile>
-    <ClCompile Include="..\blocks\Cinder-Asio\src\WaitTimer.cpp">
+    <ClCompile Include="..\..\..\blocks\Cinder-Asio\src\UdpSession.cpp">
       <Filter>Blocks\Cinder-Asio</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\blocks\Cinder-Asio\src\WaitTimer.cpp">
+      <Filter>Blocks\Cinder-Asio</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\src\OscTree.cpp">
+      <Filter>Blocks\OscTree</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\include\Resources.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\include\OscTree.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="..\blocks\Cinder-Asio\src\ClientInterface.h">
+    <ClInclude Include="..\..\..\blocks\Cinder-Asio\src\ClientInterface.h">
       <Filter>Blocks\Cinder-Asio</Filter>
     </ClInclude>
-    <ClInclude Include="..\blocks\Cinder-Asio\src\DispatcherInterface.h">
+    <ClInclude Include="..\..\..\blocks\Cinder-Asio\src\DispatcherInterface.h">
       <Filter>Blocks\Cinder-Asio</Filter>
     </ClInclude>
-    <ClInclude Include="..\blocks\Cinder-Asio\src\ServerInterface.h">
+    <ClInclude Include="..\..\..\blocks\Cinder-Asio\src\ServerInterface.h">
       <Filter>Blocks\Cinder-Asio</Filter>
     </ClInclude>
-    <ClInclude Include="..\blocks\Cinder-Asio\src\SessionInterface.h">
+    <ClInclude Include="..\..\..\blocks\Cinder-Asio\src\SessionInterface.h">
       <Filter>Blocks\Cinder-Asio</Filter>
     </ClInclude>
-    <ClInclude Include="..\blocks\Cinder-Asio\src\TcpClient.h">
+    <ClInclude Include="..\..\..\blocks\Cinder-Asio\src\TcpClient.h">
       <Filter>Blocks\Cinder-Asio</Filter>
     </ClInclude>
-    <ClInclude Include="..\blocks\Cinder-Asio\src\TcpServer.h">
+    <ClInclude Include="..\..\..\blocks\Cinder-Asio\src\TcpServer.h">
       <Filter>Blocks\Cinder-Asio</Filter>
     </ClInclude>
-    <ClInclude Include="..\blocks\Cinder-Asio\src\TcpSession.h">
+    <ClInclude Include="..\..\..\blocks\Cinder-Asio\src\TcpSession.h">
       <Filter>Blocks\Cinder-Asio</Filter>
     </ClInclude>
-    <ClInclude Include="..\blocks\Cinder-Asio\src\UdpClient.h">
+    <ClInclude Include="..\..\..\blocks\Cinder-Asio\src\UdpClient.h">
       <Filter>Blocks\Cinder-Asio</Filter>
     </ClInclude>
-    <ClInclude Include="..\blocks\Cinder-Asio\src\UdpSession.h">
+    <ClInclude Include="..\..\..\blocks\Cinder-Asio\src\UdpServer.h">
       <Filter>Blocks\Cinder-Asio</Filter>
     </ClInclude>
-    <ClInclude Include="..\blocks\Cinder-Asio\src\WaitTimer.h">
+    <ClInclude Include="..\..\..\blocks\Cinder-Asio\src\UdpSession.h">
       <Filter>Blocks\Cinder-Asio</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\blocks\Cinder-Asio\src\WaitTimer.h">
+      <Filter>Blocks\Cinder-Asio</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\src\OscTree.h">
+      <Filter>Blocks\OscTree</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
