--- a/test/OscDev/vc11/Resources.rc
+++ b/test/OscDev/vc11/Resources.rc
@@ -1,3 +1,3 @@
-#include "../include/Resources.h"
+#include "cinder/CinderResources.h"
 
-1	ICON	"..\\resources\\cinder_app_icon.ico"
+1	ICON	"../resources/cinder_app_icon.ico"
